terraform-microk8s-aws/gateways.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.vpc.id}"

  tags = "${local.common_tags}"
}
